DuPont DevSB/src/objects/pse__Rate_Card_Set_Junction__c.object
<CustomObject>
    <customHelpPage>pse__RateCardSetJunctionHelp</customHelpPage>
    <description>This is a junction object for rate cards and rate card sets.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Set__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rate Card Set</label>
        <referenceTo>pse__Rate_Card_Set__c</referenceTo>
        <relationshipLabel>Rate Card Set Junctions</relationshipLabel>
        <relationshipName>Rate_Card_Set_Junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Rate Card Set Junctions</relationshipLabel>
        <relationshipName>Rate_Card_Set_Junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Rate Card Set Junction</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCS-{00000}</displayFormat>
        <label>Rate Card Set Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Set Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Rate_Card_Set_Currency_Mismatch</fullName>
        <active>true</active>
        <description>The currency must be the same for the rate card and the rate card set.</description>
        <errorConditionFormula>ISPICKVAL(pse__Rate_Card_Set__r.CurrencyIsoCode, &apos;&apos;) ||
ISPICKVAL(pse__Rate_Card__r.CurrencyIsoCode, &apos;&apos;) ||
(TEXT(pse__Rate_Card_Set__r.CurrencyIsoCode)  &lt;&gt;  TEXT(pse__Rate_Card__r.CurrencyIsoCode))</errorConditionFormula>
        <errorMessage>You cannot associate the rate card with the rate card set. They must both use the same currency.</errorMessage>
    </validationRules>
</CustomObject>